libraryservice/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /library/.*
        backend:
          serviceName: libraryservice
          servicePort: 9300
